# INAV-X-Plane-XITL

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  MIGRATION_CHECKLIST.md  RAII_ENHANCEMENT_SUMMARY.md  RAII_PATTERN.md  README.md  REFACTORING.md  REFACTORING_COMPLETE.md  REFACTORING_README.md  REFACTORING_SUMMARY.md  ReleaseNotes.md  START_HERE.md  exports.sym_mac
.github/workflows/: build_release.yml  ci.yml  release.yml
aircraft/NK_FPVSurfwing/: NK_FPVSW.acf  NK_FPVSW.acf~  NK_FPVSW_prefs.txt
aircraft/NK_FPVSurfwing/fmod/: NK_FPVSW.snd
aircraft/NK_FPVSurfwing/plugins/xlua/scripts/sound.refs/: sound.refs.lua
doc/: development.md  setup.md
doc/nkfpvsufrwing/: example-hitl-config.txt  nkfpvsurfwing.md
release/Aircraft/Extra Aircraft/NK_FPVSurfwing/plugins/INAV-X-Plane-HITL/64/: lin.xpl  mac.xpl  win.xpl
release/Aircraft/Extra Aircraft/NK_FPVSurfwing/plugins/xlua/: init.lua
src/: DataRefs.cpp  DataRefs.h  Graph.cpp  Graph.h  MSP.cpp  MSP.h  MSP_Commands.h  Main.cpp  Map.cpp  Map.h  MathUtils.h  Menu.cpp  Menu.h  OSD.cpp  OSD.h  PowerTrain.cpp  PowerTrain.h  SimData.cpp  SimData.h  Utils.h  config.h  fontanalog.cpp  fonthdzero.cpp  fontwalksnail.cpp  graph.cpp  main.cpp  menu.cpp  msp.cpp  msp.h  osd.cpp  osd.h  platform.h  simData.cpp  sound.cpp  win.xpl
src/core/: EventBus.h  PluginContext.cpp  PluginContext.h  README.md  refactoring_examples.cpp
src/fonts/: FontAnalog.cpp  FontAnalog.h  FontAvatar.cpp  FontAvatar.h  FontBase.cpp  FontBase.h  FontHDZero.cpp  FontHDZero.h  FontWtfOS.h  Fonts.cpp  Fonts.h  fontanalog.cpp  fontbase.h  fonthdzero.cpp  fontwalksnail.cpp  fontwtfos.cpp
src/libs/GL/: SystemGL.h
src/libs/font/: fa-solid-900.inc
src/libs/stb/: stb_image.h
src/libs/xsb_public/: ImgWindow.cpp
src/renderer/: OsdRenderer.cpp  OsdRenderer.h  Shader.cpp  Shader.h  osdRenderer.cpp  osdRenderer.h  shader.cpp  shader.h
src/serial/: Serial.cpp  Serial.h  SerialBase.cpp  SerialBase.h  TcpSerial.cpp  TcpSerial.h  serial.cpp  serial.h  serialbase.cpp  serialbase.h  tcpserial.cpp  tcpserial.h
src/settings/: SettingNames.h  Settings.cpp  Settings.h
src/shaders/: interference.frag  osd.frag  vertex.vert
src/widgets/: ConfigureWindow.h  GraphSelectWindow.cpp  GraphSelectWindow.h  SettingsWindow.cpp  SettingsWindow.h  ipinputwidget.h
